--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=planManagement
 
 
-spring.neo4j.uri=neo4j+ssc://fa1e7847.databases.neo4j.io
+spring.neo4j.uri=${DB_URL}
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=e9e3ObScEtHigf1-kWFIVl7e9hzXnHazXiMkAidqHD0
+spring.neo4j.authentication.password=${DB_PASS}
